# ale_modulator

./: CMakeLists.txt  README.md  ale_symbol_library.m
include/: ale_symbol_library.h  golay.h  mod.h
src/: CMakeLists.txt  golay.c  mod.c  mod_tb.c
